--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,8 @@ Build-Depends:
  debhelper-compat (= 12),
  meson,
  pkg-config,
+ check,
+ libgtk-3-dev,
  libmtdev-dev (>= 1.1.0),
  libudev-dev,
  libevdev-dev (>= 0.4),
