Allow to build without the udeb package.

--- a/debian/control
+++ b/debian/control
@@ -57,6 +57,7 @@ Description: input device management and event handling library - udev quirks
 
 Package: libinput10-udeb
 Package-Type: udeb
+Build-Profiles: <!noudeb>
 Section: debian-installer
 Architecture: any
 Depends:
