Use secure URI in Homepage field.
Changes-By: lintian-brush
Fixes: lintian: homepage-field-uses-insecure-uri
See-also: https://lintian.debian.org/tags/homepage-field-uses-insecure-uri.html

--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends:
 Standards-Version: 4.5.0
 Vcs-Git: https://salsa.debian.org/xorg-team/lib/libinput.git
 Vcs-Browser: https://salsa.debian.org/xorg-team/lib/libinput
-Homepage: http://www.freedesktop.org/wiki/Software/libinput/
+Homepage: https://www.freedesktop.org/wiki/Software/libinput/
 
 Package: libinput10
 Architecture: any
