build: override dependency for use as subproject
Allows e.g. compositors to setup libinput as a subproject. Makes
it easier to ad support for libinput features which haven't been
released yet.

Signed-off-by: Simon Ser <contact@emersion.fr>
(cherry picked from commit ea9db278f3b062fe46553c741834b237350659a2)

--- a/meson.build
+++ b/meson.build
@@ -401,6 +401,10 @@ dep_libinput = declare_dependency(
 		link_with : lib_libinput,
 		dependencies : deps_libinput)
 
+if meson.version().version_compare('>= 0.54.0')
+	meson.override_dependency('libinput', dep_libinput)
+endif
+
 pkgconfig.generate(
 	filebase : 'libinput',
 	name : 'Libinput',
